--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body{
+    width: 100vw;
+    height: 100vh;
+}
+
 *{
     box-sizing: border-box;
 }
@@ -10,4 +15,9 @@
 .e-link{
     @apply text-gray-600 font-medium decoration-sky-700 underline underline-offset-4 cursor-pointer hover:font-semibold transition-all hover:text-gray-800; 
     font-family: 'Roboto', serif;
+}
+
+.page-bg{
+    @apply bg-red-500 w-full h-full;
+    background-image: url('https://img.freepik.com/premium-vector/school-office-stationery-seamless-pattern-items-learning-work-repeat-background_514903-1169.jpg');
 }
