--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -20,4 +20,43 @@ html, body{
 .page-bg{
     @apply bg-red-500 w-full h-full;
     background-image: url('https://img.freepik.com/premium-vector/school-office-stationery-seamless-pattern-items-learning-work-repeat-background_514903-1169.jpg');
+    background-size: auto;
+    background-repeat: repeat;
+    overflow: hidden;
+}
+
+.frm-field {
+  @apply relative py-2;
+  font: 'Roboto', sans-serif;
+}
+.frm-field .frm-label {
+  @apply absolute left-3 top-4 cursor-text select-none px-1 font-normal text-slate-500;
+  font-size: 1rem;
+  line-height: 1.2rem;
+  transition: all 0.3s ease;
+}
+.frm-field .frm-input {
+  @apply cursor-text rounded border border-gray-400 px-3 py-1.5 text-slate-800;
+  font-size: 1rem;
+
+  transition: outline-width 0.1s ease-in-out;
+}
+
+.frm-field .frm-input::placeholder {
+  content: "";
+}
+.frm-field .frm-input:required:placeholder-shown + .frm-label::after {
+  @apply ml-1 cursor-text text-red-500;
+  content: "*";
+}
+.frm-field .frm-input:focus {
+  @apply border-blue-600 outline outline-4;
+  outline-color: #38a8;
+}
+.frm-field .frm-input:focus + .frm-label,
+.frm-field .frm-input:not(:placeholder-shown) + .frm-label {
+  @apply font-bold text-slate-700;
+  top: -3px;
+  font-size: 0.85rem;
+  background-color: white;
 }
