--- a/resources/css/coming.css
+++ b/resources/css/coming.css
@@ -1,10 +1,55 @@
-@import 'app.css';
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+@import "app.css";
 
-*{
-    font-family: 'Rawline', Arial, Helvetica, sans-serif;
+* {
+    font-family: "Rawline", Arial, Helvetica, sans-serif;
 }
 
-.background{
-    @apply bg-sky-200 flex w-full h-full relative items-center;
+.bg{
+    @apply w-full h-full bg-amber-100 fixed overflow-auto;
+    background-image: url('/../public/img/coming-bg.jpg');
+    background-size: cover 0;
+    background-repeat: repeat;
+    backdrop-filter: saturate(10%);
+}
+.context {
+    @apply w-full relative flex flex-col items-center justify-center pt-[10%] max-w-[90%] mx-auto h-fit;
+}
+.title{
+    @apply w-fit h-full text-justify leading-none;
+}
+.title > h1:nth-of-type(1)
+{
+    @apply text-[40px] md:text-[70px] uppercase font-extrabold leading-none tracking-widest;
+    font-family: 'Black Han Sans', "Poetsen One", Helvetica, sans-serif;
+    color: rgb(255, 224, 85);
+    text-shadow:  -4px 3px #161718;
+}
+.title > h1:nth-of-type(2)
+{
+    @apply text-[27px] md:text-[46px] uppercase font-semibold leading-none tracking-tighter;
+    font-family: "Rawline", Helvetica, sans-serif;
+    color: #161718;
+}
+.subtitle{
+    @apply w-fit h-fit mt-[8%] bg-[#c92424] px-3 flex flex-col items-center justify-center rounded-full p-2;
+}
+.subtitle > h1{
+    @apply font-semibold text-right flex-nowrap text-[15px] md:text-[27px] md:px-4 md:py-1 text-[#ffffff] lg:text-[3rem] capitalize leading-none;
+    font-family: "Rawline", Arial, Helvetica, sans-serif;
 }
 
+.book{
+    @apply w-[75%] h-fit max-w-[750px] mx-auto;
+}
+.ratio{
+    font-family: "Rawline", Arial, Helvetica, sans-serif;
+    @apply my-[8rem] text-[1.2rem] md:text-[2rem] font-semibold text-[#f55236] text-center lg:text-[3rem];
+}
+.footer{
+    @apply w-full h-[150px] absolute bottom-0 mt-3;
+    background-image: url('/../public/img/foot.png');
+    background-repeat: repeat-x;
+    background-position: bottom;
+    background-size: cover 0;
+}
