--- a/resources/css/coming.css
+++ b/resources/css/coming.css
@@ -12,26 +12,26 @@ body{
 .bg{
     @apply w-full h-full bg-amber-100 fixed overflow-auto;
     background-image: url('/../public/img/coming-bg.jpg');
-    background-size: cover 0;
+    background-size: cover;
     background-repeat: repeat;
     backdrop-filter: saturate(10%);
 }
 .context {
-    @apply w-full relative flex flex-col items-center max-w-[90%] mx-auto h-[100%] mb-[35%] box-content;
+    @apply md:mb-[200px] w-full relative flex flex-col items-center max-w-[90%] mx-auto h-[100%] box-content lg:max-w-[65%];
 }
 .title{
-    @apply w-fit h-fit text-justify leading-none mt-[15%];
+    @apply w-fit h-fit text-justify leading-none mt-[5%];
 }
 .title > h1:nth-of-type(1)
 {
-    @apply text-[3.2rem] md:text-[6rem] lg:text-[8rem] uppercase font-extrabold leading-none tracking-widest;
+    @apply text-[3.2rem] md:text-[5rem] uppercase font-extrabold leading-none tracking-widest;
     font-family: 'Black Han Sans', "Poetsen One", Helvetica, sans-serif;
     color: rgb(255, 224, 85);
     text-shadow:  -4px 3px #161718;
 }
 .title > h1:nth-of-type(2)
 {
-    @apply text-[2.1rem] md:text-[3.95rem] lg:text-[5.3rem] uppercase font-semibold leading-none tracking-tighter;
+    @apply text-[2.1rem] md:text-[3.2rem] uppercase font-semibold leading-none tracking-tighter;
     font-family: "Rawline", Helvetica, sans-serif;
     color: #161718;
 }
@@ -39,17 +39,19 @@ body{
     @apply w-fit h-fit mt-[15%] bg-[#c92424] px-3 flex flex-col items-center justify-center rounded-full p-2;
 }
 .subtitle > h1{
-    @apply font-semibold text-right flex-nowrap text-[1.3rem] px-3 tracking-wide md:text-[27px] md:px-4 md:py-1 text-[#ffffff] lg:text-[3rem] capitalize leading-none;
+    @apply font-semibold text-right flex-nowrap text-[1.3rem] px-3 tracking-wide md:px-4 md:py-1 text-[#ffffff] capitalize leading-none;
     font-family: "Rawline", Arial, Helvetica, sans-serif;
 }
-
-.book{
-    @apply w-[75%] h-fit max-w-[750px] mx-auto;
+.infos{
+    @apply relative mt-[20%] md:mt-[15%] max-w-[80%] mx-auto max-h-[40%];
 }
 .ratio{
-    /* font-family: "Rawline", Arial, Helvetica, sans-serif; */
-    @apply  text-[1rem] md:text-[2rem] py-0.5 md:py-1 md:px-5 bg-[#ffe342] px-2 absolute left-1/2 -translate-x-1/2 shadow-md w-full rounded-full z-[100] max-w-[95%] md:-top-5 -top-2 text-[#1d1d1d] text-center font-semibold;
+    @apply  text-[1rem] md:text-[1.5rem] py-0.5 md:py-1 md:px-5 bg-[#ffe342] px-2 absolute left-1/2 -translate-x-1/2 shadow-md w-full rounded-full z-[100] max-w-[95%] md:-top-5 -top-2 text-[#1d1d1d] text-center font-semibold;
 }
+.book{
+    @apply text-[1rem] md:text-[1.5rem] shadow-lg border pt-[10%] border-gray-300 bg-white md:px-8 px-5 z-[10] relative py-7 rounded-md text-center;
+}
+
 .footer{
     @apply w-full h-[10%] bottom-0 mt-3 fixed;
     background-image: url('/../public/img/foot.png');
