--- a/resources/css/coming.css
+++ b/resources/css/coming.css
@@ -12,15 +12,15 @@ body{
 .bg{
     @apply w-full h-full bg-amber-100 fixed overflow-auto;
     background-image: url('/../public/img/coming-bg.jpg');
-    background-size: cover;
     background-repeat: repeat;
     backdrop-filter: saturate(10%);
+    background-size: contain;
 }
 .context {
-    @apply md:mb-[200px] w-full relative flex flex-col items-center max-w-[90%] mx-auto h-[100%] box-content lg:max-w-[65%];
+    @apply  w-full relative flex flex-col items-center justify-start max-w-[90%] mx-auto h-[100%] box-content lg:max-w-[65%];
 }
 .title{
-    @apply w-fit h-fit text-justify leading-none mt-[5%];
+    @apply w-fit h-fit text-justify leading-none mt-[15%] mb-[3rem];
 }
 .title > h1:nth-of-type(1)
 {
@@ -36,14 +36,14 @@ body{
     color: #161718;
 }
 .subtitle{
-    @apply w-fit h-fit mt-[15%] bg-[#c92424] px-3 flex flex-col items-center justify-center rounded-full p-2;
+    @apply w-fit h-fit bg-[#c92424] px-3 flex flex-col items-center justify-center rounded-full p-2;
 }
 .subtitle > h1{
     @apply font-semibold text-right flex-nowrap text-[1.3rem] px-3 tracking-wide md:px-4 md:py-1 text-[#ffffff] capitalize leading-none;
     font-family: "Rawline", Arial, Helvetica, sans-serif;
 }
 .infos{
-    @apply relative mt-[20%] md:mt-[15%] max-w-[80%] mx-auto max-h-[40%];
+    @apply relative mt-[25%] max-w-[80%] mx-auto max-h-[40%];
 }
 .ratio{
     @apply  text-[1rem] md:text-[1.5rem] py-0.5 md:py-1 md:px-5 bg-[#ffe342] px-2 absolute left-1/2 -translate-x-1/2 shadow-md w-full rounded-full z-[100] max-w-[95%] md:-top-5 -top-2 text-[#1d1d1d] text-center font-semibold;
